# BrainSafes

./: -files --others --exclude-standard  DEPLOYMENT_GUIDE.md  LICENSE  README.md  TODO_CORE_FEATURES.md  TODO_CRITICAL_FIXES.md  deployments-simple-arbitrumSepolia.json  hardhat-simple.config.js  hardhat.config.js  package-lock.json  package.json  tart pwsh  tatus  vercel.json
cache/: solidity-files-cache.json
config/: nodeConfig.json
contracts/ai/: AIProcessorStylus.rs  Cargo.toml  OffChainCompute.rs  StylusComponents.rs
contracts/ai/.cargo/: config.toml
contracts/ai/src/: lib.rs  tests.rs
docs/: ADVANCED_ANALYTICS_AND_SECURITY.md  API.md  IMPLEMENTACION_COMPLETA.md  INTERFACES_IMPLEMENTATION.md  IPFS_AND_NOTIFICATIONS_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  architecture.md  deployment.md  examples.md  faqs.md  flows.md  troubleshooting.md  whitepaper.md
fiat-payments-backend/: API_DOCUMENTATION.md  package-lock.json  package.json  test-api.js
frontend/: CHATBOT_IMPROVEMENTS.md  DARK_MODE_IMPLEMENTATION.md  FOOTER_IMPROVEMENTS.md  IMPLEMENTACION_COMPLETA_CHATBOT.md  IMPLEMENTACION_FOOTER_COMPLETA.md  TAILWIND_IMPROVEMENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js  vite.config.prod.js
scripts/: bridge-assets.js  build-custom-node.sh  check-arbitrum-status.js  debug.js  deploy-arbitrum.js  deploy-bridge.js  deploy-core-only.js  deploy-l2.js  deploy-main-contracts.js  deploy-multisig.js  deploy-simple-contracts.js  deploy-stylus.sh  deploy-upgradeable.js  deploy-zkaccess.js  deploy.js  monitor.js  (+22 more)
(+498 files in other folders)
