[package]
name = "brainsafes-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stylus-sdk = "0.4.2"
alloy-primitives = "0.3.1"
wee_alloc = "0.4.5"
hex = "0.4.3"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[workspace]
members = [
    ".",
] 